# IR_EnhanceMethods

./: SaliencyExtractionMethods.rar
AHBE/include/: ahbe.h
AHBE/src/: ahbe.cpp  main.cpp
HE/ADPHE/include/: adphe.h
HE/ADPHE/src/: adphe.cpp  main.cpp
HE/APHE/: run.sh
HE/APHE/include/: aphe.h
HE/APHE/src/: main.cpp
HE/DPHE/: CMakeLists.txt  mkdir.sh
HE/DPHE/include/: dphe.h
HE/DPHE/src/: dphe.cpp  main.cpp
HE/PHE/include/: phe.h
HE/PHE/src/: main.cpp  phe.cpp
IEAGCCH/include/: agcch.h
IEAGCCH/src/: agcch.cpp  main.cpp
IR_denoise/: CMakeLists.txt  run.sh
IR_denoise/include/: IR_denoise.h  nlm.h
IR_denoise/src/: main.cpp  nlm.cpp
IR_vis_fuse/include/: ir_vis_fush.h
IR_vis_fuse/src/: ir_vis_fuse.cpp  main.cpp
MorphologyBasedMethods/: mkdir.sh
MorphologyBasedMethods/include/: IR_Morphology.h
MorphologyBasedMethods/src/: IR_Morphology.cpp  main.cpp
SaliencyExtractionMethods/include/: IR_SaliencyExtraction.h
SaliencyExtractionMethods/src/: IR_SaliencyExtraction.cpp  main.cpp
contrast_stretch/include/: contrast_stretch.h
contrast_stretch/src/: contrast_stretch.cpp  main.cpp
filter/: CMakeLists.txt
filter/include/: IR_filter.h
filter/src/: IR_filter.cpp  main.cpp
rangeCompress/include/: rangeCompress.h
rangeCompress/src/: main.cpp  rangeCompress.cpp
waveletBasedMethod/clusterOfWaveletCoefficient/include/: cowc.h
waveletBasedMethod/clusterOfWaveletCoefficient/src/: cowc.cpp
